...
        Text(
            text = "¡Únete!",
            fontFamily = miTipografia,
            fontSize = 30.sp,
            color = ColorPrimario,
            fontWeight = ExtraBold,
            modifier = Modifier.testTag("tituloRegistro")
        )

        Spacer(Modifier.height(20.dp))

        Row(
            Modifier
...
                        TercerPaso(
                            model.fecha,
                            { mostrarSelectorFecha = true },
                            { paso-- },
                            { paso++ }
                        )
                        SelectorFecha(
                            mostrarSelectorFecha,
                            { mostrarSelectorFecha = false },
                            { myViewModel.cambiarFecha(it) },
                            LocalDate(1926, 1, 1),
                            LocalDate(2020,1,1)
                        )
...
        Spacer(Modifier.height(15.dp))
        OutlinedTextField(
            email,
            cambiarEmail,
            Modifier
                .fillMaxWidth()
                .testTag("textFieldEmail"),
            trailingIcon = { Icon(Icons.Default.Email, "") },
            shape = RoundedCornerShape(12.dp),
            label = { Text("Email", fontFamily = miTipografia) },
            placeholder = { Text("ejemplo@gmail.com") },
            colors = outlinedCustomColors()
        )
        Spacer(Modifier.height(45.dp))
        OutlinedTextField(
            contra,
            cambiarContra,
            Modifier
                .fillMaxWidth()
                .testTag("textFieldContra"),
            trailingIcon = { Icon(Icons.Default.Lock, "") },
            label = { Text("Contraseña", fontFamily = miTipografia) },
            placeholder = { Text("123abc456") },
            shape = RoundedCornerShape(12.dp),
            colors = outlinedCustomColors()
        )
...
                    containerColor = ColorAcento,
                    disabledContainerColor = ColorAcento.copy(0.5f),
                ),
                modifier = Modifier
                    .width(130.dp)
                    .height(56.dp)
                    .testTag("botonPrimerPaso"),
                shape = RoundedCornerShape(12.dp)
            ) {
                Text(
                    "Continuar",
                    fontFamily = miTipografia,
                    color = Color.White,
...
        Spacer(Modifier.height(15.dp))
        OutlinedTextField(
            nombreUsuario,
            cambiarNombreUsuario,
            Modifier
                .fillMaxWidth()
                .testTag("textFieldNombreUsuario"),
            trailingIcon = { Icon(Icons.Default.Person, "") },
            label = {
                Text(
                    "Nombre de usuario",
                    fontFamily = miTipografia
                )
...
        Spacer(Modifier.height(45.dp))
        OutlinedTextField(
            apellidos,
            cambiarApellidos,
            Modifier
                .fillMaxWidth()
                .testTag("textFieldApellidos"),
            trailingIcon = { Icon(Icons.Default.Face, "") },
            label = { Text("Apellidos") },
            placeholder = { Text("apellido1") },
            shape = RoundedCornerShape(12.dp),
            colors = outlinedCustomColors()
        )
...
                    containerColor = Color.White,
                ),
                shape = RoundedCornerShape(12.dp),
                modifier = Modifier
                    .width(130.dp)
                    .height(56.dp)
                    .testTag("botonVolver1"),
                border = BorderStroke(1.dp, ColorBordeTextField)
            ) {
                Text(
                    "Volver",
                    fontFamily = miTipografia,
                    fontSize = 15.sp,
...
            Button(
                onClick = siguientePaso,
                enabled = camposCompletados,
                modifier = Modifier
                    .width(130.dp)
                    .height(56.dp)
                    .testTag("botonSegundoPaso"),
                colors = ButtonDefaults.buttonColors(
                    containerColor = ColorAcento,
                    disabledContainerColor = ColorAcento.copy(0.5f)
                ),
                shape = RoundedCornerShape(12.dp)
            ) {
...
